# saturn5

./: .gitignore  README.md
Etagement/: Etagement 2 etages.xls  Etagement.xlsm  Etagement1.xlsm  Etagement1475pertes.xls  EtagementEssai.xlsm  EtagementFigePourRapport.xlsm  EtagementRestaure.xls  EtagementYann.xlsm  Geometrie_lanceur_3.pptx  Géométrie lanceur 2.pptx  Leonor.xls  thebestofthebest.xlsm
Maquette Lanceur/: Etage 1.CATProduct  Etage 2.CATProduct  Etage 3.CATProduct  Jupe AV3.CATPart  Lanceur.CATProduct  Reservoir Etage 1.CATPart
Maquette_Lanceur/: Bati Moteur 3.CATPart  Case_a_equipements.CATPart  Chambre_Combustion_3.CATPart  Coiffe.CATPart  Jupe AR1.CATPart  Jupe AV1.CATPart  Jupe AV2.CATPart  Jupe_AR2.CATPart  Jupe_AR3.CATPart  ParametrageGeometrieLanceur.xls  Pressu LOX.CATPart  Reservoir Etage 2.CATPart  Reservoir LH2.CATPart  Reservoir LOX.CATPart  Tete.CATProduct  Tuyere 1.CATPart  Tuyere 2.CATPart  Tuyere_3.CATPart
Programmes Matlab/: CA.m  REQ_to_RD0.m  TraceSol.m  axePousse.m  detecteFluxThermique.m  fluxThermique.m  gravite.m  incidence.m  latlong.m  latlong_to_inertiel.m  pression.m
Programmes_Matlab/: Atmosphere_us76.txt  RD0_to_REQ.m  RD0_to_RL0.m  RL0_to_RD0.m  RL_to_RL0.m  ReadExcel.m  Vair.m  acceleration.m  commande.m  contrainteApogee.m  critereApogee.m  criterePerigee.m  debit.m  detecteIncidenceNulle.m  gammaAbs.m  (+16 more)
python/: .gitignore  AUTHORS.rst  MANIFEST.in  README.rst  clean.sh  requirements.txt  setup.cfg  setup.py
python/saturn5/: Etage.py  Lanceur.py  Stage.py  atmosphere.py  coordinate.py  gravity.py
python/tests/: TestBase.py  matlab.py  requirements.txt  test_coordinates.py  test_gravity.py  test_lanceur.py
(+68 files in other folders)
