[metadata]
name = saturn5
author = Yann de Thé
author_email = yann@johncloud.fr
home_page = https://gitlab.com/ydethe/saturn5
description = A library to simulate a saturn 5 launcher
long_description = file: README.rst
version = 0.1.0
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = find:
setup_requires =
	setuptools >=38.3.0
	wheel >=0.29.0
tests_require =
	tox

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = gztar

[tox:tox]
envlist = py,flake8

[testenv]
passenv =
    CODECOV_*
    GITLAB_CI
    CI_BUILD_*
setenv =
	PYTHONPATH ~= {toxinidir}{:}{toxinidir}/tests
deps =
	-r tests/requirements.txt
conda_env=
    environment.yml
whitelist_externals =
	mkdir
	mv
	bash
commands =
    python --version
    # To generate the reference images:
    # python -m pytest --mpl-generate-path=tests/baseline tests
    # Once you are happy with the generated images, you should move them to a sub-directory called baseline relative to the test files
    # See https://github.com/matplotlib/pytest-mpl
	python -m pytest --mpl --mpl-generate-summary=html --mpl-results-path=results --cov saturn5 tests --doctest-modules saturn5
sitepackages = true
recreate = false
